<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/exo_player_view">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/step_image_view"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/StepFullDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description"
        android:padding="10dp"
        android:textColor="#212121"
        android:layout_margin="5dp"
        android:background="#f57f30"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="22sp"/>

</LinearLayout>